[fixme] move isn't fixed correctly, broken on this version

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,7 @@
 
 @keyframes slideup {
     from {
-        transform: translateY(10px);
+        transform: translateY(-10px);
         opacity: 0;
     } to {
         transform: translateY(0px);
